# rust-api

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  heroku.yml
.github/workflows/: deploy-heroku.yml
db/: Dockerfile
db/docker-entrypoint-initdb.d/: document.md  init.sql
server/: .env.example  .gitignore  Cargo.toml  Dockerfile
server/migrations/2022-02-20-105058_create_categories/: down.sql  up.sql
server/src/: main.rs  routes.rs  schema.rs
server/src/controllers/: index.rs
src/: main.rs  todo.rs
