[package]
name = "rust-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.131", features = ["derive"]}
serde_json = "1.0.68"
qovery-engine = { git = "https://github.com/Qovery/engine", branch="main" }
config = "0.12.0"
dotenv = "0.15.0"
lazy_static = "1.4.0"
once_cell = "1.9.0"

log = "0.4.0"
simplelog = "0.11.1"
getset = "0.1.2"

actix-web = "3.3.2"
actix-rt = "1.1.1"
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono"] }
chrono = "0.4.19"
r2d2 = "0.8.9"
anyhow = { version = "1", features = ["backtrace"] }